samples/_failures_safe/1761072574_b28f71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16581811.c: In function ‘main’:
./samples/SAFE/__tmp_16581811.c:130: error: expected ‘{’ at end of input
